force-app/main/default/objects/Transaction__c/fields/AmountBreakdownCategory__c.field-meta.xml
<CustomField>
    <fullName>AmountBreakdownCategory__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Amount Breakdown Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>