force-app/main/default/objects/Transaction__c/fields/AmountCurrencyCode__c.field-meta.xml
<CustomField>
    <fullName>AmountCurrencyCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Amount Currency Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>