force-app/main/default/objects/Transaction__c/fields/AmountOnInstrument__c.field-meta.xml
<CustomField>
    <fullName>AmountOnInstrument__c</fullName>
    <label>AmountOnInstrument</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>