force-app/main/default/objects/Transaction__c/fields/AmountOnInstrumentCurrencyCode__c.field-meta.xml
<CustomField>
    <fullName>AmountOnInstrumentCurrencyCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AmountOnInstrumentCurrencyCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>