force-app/main/default/objects/Transaction__c/fields/CostTypeCategory__c.field-meta.xml
<CustomField>
    <fullName>CostTypeCategory__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cost Type Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>