force-app/main/default/objects/Transaction__c/fields/EffectiveDateEN__c.field-meta.xml
<CustomField>
    <fullName>EffectiveDateEN__c</fullName>
    <description>Date should be in MM/DD/YYYY format for English comm</description>
    <formula>IF(NOT(ISNULL(EffectiveDate__c)), 
  IF(LEN(TEXT(MONTH(DATEVALUE(EffectiveDate__c)))) &gt; 1 , TEXT(MONTH(DATEVALUE(EffectiveDate__c))), &quot;0&quot; + TEXT(MONTH(DATEVALUE(EffectiveDate__c))))
  &amp; &quot;/&quot; &amp; 
  IF(LEN(TEXT(DAY(DATEVALUE(EffectiveDate__c)))) &gt; 1 , TEXT(DAY(DATEVALUE(EffectiveDate__c))), &quot;0&quot; + TEXT(DAY(DATEVALUE(EffectiveDate__c))))
  &amp; &quot;/&quot; &amp; 
  TEXT(YEAR(DATEVALUE(EffectiveDate__c))), 
null)</formula>
    <label>Effective Date EN</label>
    <type>Text</type>
</CustomField>