force-app/main/default/objects/Transaction__c/fields/Exposure__c.field-meta.xml
<CustomField>
    <fullName>Exposure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exposure</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Case.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Benefits, BodilyInjury, OtherExposure</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>TransactionsByExposure</relationshipName>
    <type>Lookup</type>
</CustomField>