force-app/main/default/objects/Transaction__c/fields/InstrumentStatus__c.field-meta.xml
<CustomField>
    <fullName>InstrumentStatus__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Instrument Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>