force-app/main/default/objects/Transaction__c/fields/NameOnInstrument__c.field-meta.xml
<CustomField>
    <fullName>NameOnInstrument__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Name On Instrument</label>
    <length>255</length>
    <type>Text</type>
</CustomField>