force-app/main/default/objects/Transaction__c/fields/TransactionEventDate__c.field-meta.xml
<CustomField>
    <fullName>TransactionEventDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TransactionEventDate</label>
    <type>DateTime</type>
</CustomField>