force-app/main/default/objects/Transaction__c/fields/TransactionStatus__c.field-meta.xml
<CustomField>
    <fullName>TransactionStatus__c</fullName>
    <label>TransactionStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AWS</fullName>
                <label>Awaiting submission</label>
            </value>
            <value>
                <fullName>CLR</fullName>
                <label>Cleared</label>
            </value>
            <value>
                <fullName>DND</fullName>
                <label>Denied</label>
            </value>
            <value>
                <fullName>DRF</fullName>
                <label>Draft</label>
            </value>
            <value>
                <fullName>ISD</fullName>
                <label>Issued</label>
            </value>
            <value>
                <fullName>NOT</fullName>
                <label>Notifying</label>
            </value>
            <value>
                <fullName>PAP</fullName>
                <label>Pending approval</label>
            </value>
            <value>
                <fullName>PRC</fullName>
                <label>Pending recode</label>
            </value>
            <value>
                <fullName>PST</fullName>
                <label>Pending stop</label>
            </value>
            <value>
                <fullName>PTR</fullName>
                <label>Pending transfer</label>
            </value>
            <value>
                <fullName>PVD</fullName>
                <label>Pending void</label>
            </value>
            <value>
                <fullName>REC</fullName>
                <label>Recoded</label>
            </value>
            <value>
                <fullName>REJ</fullName>
                <label>Rejected</label>
            </value>
            <value>
                <fullName>RQD</fullName>
                <label>Requested</label>
            </value>
            <value>
                <fullName>RQS</fullName>
                <label>Requesting</label>
            </value>
            <value>
                <fullName>STP</fullName>
                <label>Stopped</label>
            </value>
            <value>
                <fullName>SUB</fullName>
                <label>Submitted</label>
            </value>
            <value>
                <fullName>SBM</fullName>
                <label>Submitting</label>
            </value>
            <value>
                <fullName>TRS</fullName>
                <label>Transferred</label>
            </value>
            <value>
                <fullName>VOD</fullName>
                <label>Voided</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>