force-app/main/default/objects/Transaction__c/fields/TransactionType__c.field-meta.xml
<CustomField>
    <fullName>TransactionType__c</fullName>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>claimrecovery</fullName>
            </value>
            <value>
                <fullName>payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>