force-app/main/default/objects/Transaction__c/listViews/Omni_Default_Owner_Unassigned_Transaction.listView-meta.xml
<ListView>
    <fullName>Omni_Default_Owner_Unassigned_Transaction</fullName>
    <filterScope>Queue</filterScope>
    <label>Claims - Omni Default Owner Unassigned</label>
    <queue>Omni_Default_Owner_Unassigned</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>